# profitapi.cpp

./: CMakeLists.txt  LICENSE  README.md
include/profitapi/: profitapi.hpp  version.hpp
src/: profitapi-boostimpl.cpp  profitapi.cpp
